<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="find_representatives">Find my representatives</string>
    <string name="header_text">Header</string>
    <string name="follow_election_text">Follow election</string>
    <string name="correspondence_address">Correspondence address</string>
    <string name="unknown_address">unknown address</string>
    <string name="network_error">No connection error</string>

    <string name="txt_follow_election">FOLLOW ELECTION</string>
    <string name="txt_unfollow_election">UNFOLLOW ELECTION</string>
    <string name="election_information">Election information</string>
    <string name="zip_code_text">Zip Code</string>
    <string name="representative_search_text">Representative search</string>
    <string name="address_line_1_text">Address Line 1</string>
    <string name="address_line_2_text">Address Line 2</string>
    <string name="city_text">City</string>
    <string name="find_my_representatives_text">Find my representatives</string>
    <string name="use_my_location_text">Use my location</string>
    <string name="my_representatives_text">My representatives</string>

    <string name="go_to_twitter">Open Representative Twitter</string>
    <string name="go_to_facebook">Open Representative facebook</string>
    <string name="go_to_website">Open Representative website</string>
    <string name="representative_photo">Representative Photo</string>

    <string name="permission_denied_explanation">You need to grant location permission in order to use your location.</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use this feature.</string>

</resources>
