<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            tools:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/representative_title"
            style="@style/TextNormalStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toTopOf="@id/representative_photo"
            tools:text="President of the Brazil" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/go_to_twitter"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="@id/representative_photo"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/go_to_facebook"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@id/twitter_icon"
            app:layout_constraintEnd_toStartOf="@id/twitter_icon" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/go_to_website"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="@id/facebook_icon"
            app:layout_constraintEnd_toStartOf="@id/facebook_icon" />

        <TextView
            android:id="@+id/representative_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@{representative.official.name}"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/party_name"
            app:layout_constraintEnd_toEndOf="@id/party_name"
            app:layout_constraintStart_toStartOf="@id/representative_title"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            tools:text="Jair Bolsonaro" />

        <TextView
            android:id="@+id/party_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@{representative.official.party}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/representative_photo"
            app:layout_constraintEnd_toStartOf="@id/www_icon"
            app:layout_constraintStart_toStartOf="@id/representative_title"
            app:layout_constraintTop_toBottomOf="@id/representative_name"
            tools:text="Republican Party" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@+id/representative_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>